--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-shell": "^1.1.1",
     "load-grunt-config": "^0.16.0",
     "time-grunt": "^1.0.0",
+    "grunt-text-replace": "^0.3.12",
     "grunt-sitemap": "^1.2.1"
 
   },
